# fuck-coding-interviews

./: .coveragerc  LICENSE  README.md  codecov.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: codeql-analysis.yml  linter.yml  main.yml  tests.yml
algorithms/hashing/: mad_compression.py
algorithms/math/: factorial.py  fibonacci.py  fibonacci_sequence.py
algorithms/searching/: binary_search.py  binary_search_left_bound.py  linear_search.py
algorithms/sorting/: bubble_sort.py  counting_sort.py  heap_sort.py  heapsort.py  insertion_sort.py  merge_sort.py  mergesort.py  quick_sort.py  quicksort.py  (+1 more)
problems/: add_two_numbers.py  array_intersection.py  array_sum.py  balanced_binary_tree.py  best_time_to_buy_and_sell_stock.py  bfs_shortest_path_in_a_graph.py  big_countries.sql  binary_search_tree_iterator.py  binary_tree_inorder_traversal.py  binary_tree_level_order_traversal.py  binary_tree_maximum_path_sum.py  binary_tree_postorder_traversal.py  binary_tree_preorder_traversal.py  camel_case.py  check_completeness_of_a_binary_tree.py  clone_graph.py  coin_change.py  combinations.py  container_with_most_water.py  contains_duplicate.py  counting_valleys.py  course_schedule.py  ctci_bfs_shortest_reach.py  delete_node_in_a_linked_list.py  dijkstra_shortest_reach_2.py  equality_in_a_array.py  fibonacci_number.py  find_minimum_in_rotated_sorted_array.py  find_mode_in_binary_search_tree.py  find_the_duplicate_number.py  fizz_buzz.py  group_anagrams.py  hackerrank_in_a_string.py  hash_tables_ransom_note.py  implement_strstr.py  implement_trie_prefix_tree.py  invert_binary_tree.py  is_subsequence.py  jumping_on_the_clouds.py  kruskal_mst_really_special_subtree.py  (+58 more)
(+170 files in other folders)
